[package]
name = "matrix-migrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.11"
log = "0.4"
futures = "0.3"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
matrix-sdk = { version = "0.7.1", features = ["anyhow", "sso-login"] }
